--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 
 <html>
@@ -25,7 +24,7 @@
       <h1><a href="/">Seasonaly</a></h1>
       <a href="#" class="explain"><span>What is this</span>&darr;</a>
       <div class="explanation">
-        <p>Seasonaly is a tiny website for people that can't spell and don't know that much about fruits & veggies. This page lists the fruits and vegetables that are in season today. <a href="/purpose">Read why &rarr;</a></p>
+        <p>Seasonaly is a tiny website for people that can't spell and don't know that much about fruits &amp; veggies. This page lists the fruits and vegetables that are in season today. <a href="/purpose">Read why &rarr;</a></p>
       </div>
       <div class="today">
         <p><em></em>, <strong></strong>, in <span>New York City</span></p>
@@ -51,11 +50,12 @@
     </script>
     <script>
     $.getJSON('/json/fv.json', function(data) {
-      // var template = "{{#.}}<h1>{{title}} {{type}}</h1><p> {{description}}</p>{{/.}}";
+      console.log( 'json loaded' );
+
       var template = $('#food-data').html();
       var html = Mustache.to_html(template, data);
-      var template = Handlebars.compile(html);
       $('#food-list').append(html);
+      moreInfo();
     });
     </script>
     <script src="/js/index.js"></script>
